--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^1.3.1",
     "chroma-js": "^1.3.7",
     "lodash": "^4.17.10",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
     "node-sass-chokidar": "^1.3.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
